Improve logging and large size handling